<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <com.wa.toolkit.ui.preferences.CardPreferenceCategory
        android:title="@string/category_message_protection">

        <androidx.preference.ListPreference
            android:entries="@array/antirevoke_entries"
            android:entryValues="@array/antirevoke_values"
            android:key="antirevoke"
            android:summary="@string/antirevoke_sum"
            android:title="@string/antirevoke"
            app:icon="@drawable/deleted" />

        <androidx.preference.ListPreference
            android:entries="@array/antirevoke_entries"
            android:entryValues="@array/antirevoke_values"
            android:key="antirevokestatus"
            android:summary="@string/antirevokestatus_sum"
            android:title="@string/antirevokestatus"
            app:icon="@drawable/ic_status" />

        <androidx.preference.SwitchPreferenceCompat
            android:key="antidisappearing"
            android:summary="@string/antidisappearing_sum"
            android:title="@string/antidisappearing"
            app:icon="@drawable/ic_timer" />

        <androidx.preference.SwitchPreferenceCompat
            android:key="antieditmessages"
            android:summary="@string/show_edited_message_history_sum"
            android:title="@string/show_edited_message_history"
            app:icon="@drawable/edit2" />

        <androidx.preference.Preference
            android:key="open_deleted_messages"
            android:summary="@string/deleted_messages_sum"
            android:title="@string/deleted_messages_title"
            app:icon="@drawable/ic_delete" />

    </com.wa.toolkit.ui.preferences.CardPreferenceCategory>

    <com.wa.toolkit.ui.preferences.CardPreferenceCategory
        android:title="@string/category_safe_interaction">

        <androidx.preference.SwitchPreferenceCompat
            android:key="verify_blocked_contact"
            android:summary="@string/show_contact_blocked_sum"
            android:title="@string/show_contact_blocked"
            app:icon="@drawable/ic_person" />

        <androidx.preference.SwitchPreferenceCompat
            android:key="alertsticker"
            android:summary="@string/enable_confirmation_to_send_sticker_sum"
            android:title="@string/enable_confirmation_to_send_sticker"
            app:icon="@drawable/ic_sticker" />

    </com.wa.toolkit.ui.preferences.CardPreferenceCategory>

    <com.wa.toolkit.ui.preferences.CardPreferenceCategory
        android:title="@string/category_chat_enhancements">

        <androidx.preference.SwitchPreferenceCompat
            android:key="pinnedlimit"
            android:summary="@string/disable_pinned_limit_sum"
            android:title="@string/disable_pinned_limit"
            app:icon="@drawable/ic_pin" />

        <androidx.preference.SwitchPreferenceCompat
            android:key="removeforwardlimit"
            android:summary="@string/removeforwardlimit_sum"
            android:title="@string/removeforwardlimit"
            app:icon="@drawable/ic_forward" />

        <androidx.preference.SwitchPreferenceCompat
            android:key="hidetag"
            android:summary="@string/hidetag_sum"
            android:title="@string/hidetag"
            app:icon="@drawable/eye_disabled" />

        <androidx.preference.SwitchPreferenceCompat
            android:key="revokeallmessages"
            android:summary="@string/delete_for_everyone_all_messages_sum"
            android:title="@string/delete_for_everyone_all_messages"
            app:icon="@drawable/ic_delete" />

        <androidx.preference.SwitchPreferenceCompat
            android:key="removeseemore"
            android:summary="@string/remove_see_more_button_"
            android:title="@string/remove_see_more_button"
            app:icon="@drawable/ic_text" />

        <androidx.preference.SwitchPreferenceCompat
            android:key="show_admin_group_icon"
            android:summary="@string/show_admin_group_icon_sum"
            android:title="@string/show_admin_group_icon"
            app:icon="@drawable/ic_admin" />

        <androidx.preference.SwitchPreferenceCompat
            android:key="animation_emojis"
            android:summary="@string/animation_emojis_sum"
            android:title="@string/animation_emojis"
            app:icon="@drawable/ic_round_check_circle_24" />

    </com.wa.toolkit.ui.preferences.CardPreferenceCategory>

    <com.wa.toolkit.ui.preferences.CardPreferenceCategory
        android:title="@string/category_interactions_tools">

        <androidx.preference.SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="doubletap2like"
            android:summary="@string/double_click_to_like_sum"
            android:title="@string/double_click_to_react"
            app:icon="@drawable/ic_touch" />

        <androidx.preference.SwitchPreferenceCompat
            android:key="google_translate"
            android:summary="@string/google_translate_sum"
            android:title="@string/google_translate"
            app:icon="@drawable/ic_translate" />

        <androidx.preference.SwitchPreferenceCompat
            android:key="stamp_copied_message"
            android:summary="@string/stamp_copied_messages_sum"
            android:title="@string/stamp_copied_messages"
            app:icon="@drawable/ic_copy" />

    </com.wa.toolkit.ui.preferences.CardPreferenceCategory>

</PreferenceScreen>