<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:iconSpaceReserved="false"
        android:title="@string/category_app_management">

        <androidx.preference.SwitchPreferenceCompat
            android:key="update_check"
            android:defaultValue="true"
            android:summary="@string/update_check_sum"
            android:title="@string/update_check" />

        <androidx.preference.SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="disable_expiration"
            android:summary="@string/disable_whatsapp_expiration_sum"
            android:title="@string/disable_whatsapp_expiration" />

        <androidx.preference.SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="bypass_version_check"
            android:summary="@string/disable_version_check_sum"
            android:title="@string/disable_version_check" />

        <androidx.preference.SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="force_restore_backup_feature"
            android:summary="@string/force_restore_backup_summary"
            android:title="@string/force_restore_backup" />

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        android:title="@string/category_interface_system">

        <ListPreference
            android:entries="@array/thememode_entries"
            android:entryValues="@array/thememode_values"
            android:key="thememode"
            android:summary="%s"
            android:title="@string/theme_mode" />

        <androidx.preference.SwitchPreferenceCompat
            android:key="lite_mode"
            android:summary="@string/lite_mode_sum"
            android:title="@string/lite_mode" />

        <androidx.preference.SwitchPreferenceCompat
            android:key="enable_spy"
            android:summary="@string/enable_spy_sum"
            android:title="@string/enable_spy" />

        <androidx.preference.SwitchPreferenceCompat
            android:key="force_english"
            android:summary="Force English language for the module UI"
            android:title="@string/force_english" />

        <com.wa.toolkit.preference.FloatSeekBarPreference
            android:defaultValue="0"
            android:key="change_dpi"
            app:maxValue="600"
            app:minValue="0"
            android:title="@string/change_default_dpi" />

        <androidx.preference.SwitchPreferenceCompat
            android:key="ampm"
            android:title="@string/ampm" />

        <androidx.preference.SwitchPreferenceCompat
            android:key="segundos"
            android:summary="@string/segundosnahora_sum"
            android:title="@string/segundosnahora" />

        <androidx.preference.SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="pure_black"
            android:summary="@string/pure_black_sum"
            android:title="@string/pure_black" />

        <androidx.preference.SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="haptic_feedback"
            android:summary="@string/haptic_feedback_sum"
            android:title="@string/haptic_feedback" />

        <EditTextPreference
            app:iconSpaceReserved="false"
            android:key="secondstotime"
            android:summary="@string/textonahora_sum"
            android:title="@string/textonahora" />

        <androidx.preference.SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="enablelogs"
            android:title="@string/verbose_logs" />

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        android:title="@string/category_advanced_tweaks">

        <androidx.preference.SwitchPreferenceCompat
            android:summary="@string/bootloader_spoofer_sum"
            android:title="@string/bootloader_spoofer"
            android:key="bootloader_spoofer" />

        <androidx.preference.SwitchPreferenceCompat
            android:summary="@string/bootloader_spoofer_sum"
            android:title="Enable Custom KeyBox"
            android:key="bootloader_spoofer_custom" />

        <com.wa.toolkit.preference.FileReaderPreference
            android:key="bootloader_spoofer_xml"
            android:dependency="bootloader_spoofer_custom"
            android:title="Use Custom keybox.xml file"
            android:summary="No file selected" />

        <androidx.preference.SwitchPreferenceCompat
            android:key="tasker"
            android:summary="@string/enable_tasker_automation_sum"
            android:title="@string/enable_tasker_automation" />

    </PreferenceCategory>

</PreferenceScreen>