<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.wa.toolkit.ui.preferences.CardPreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/category_navigation">

        <Preference
            app:fragment="com.wa.toolkit.ui.fragments.GeneralFragment$HomeGeneralPreference"
            app:iconSpaceReserved="false"
            app:summary="@string/summary_tools"
            app:title="@string/tools" />

        <Preference
            app:fragment="com.wa.toolkit.ui.fragments.GeneralFragment$HomeScreenGeneralPreference"
            app:iconSpaceReserved="false"
            app:summary="@string/summary_home_screen"
            app:title="@string/home_screen" />

        <Preference
            app:fragment="com.wa.toolkit.ui.fragments.GeneralFragment$ConversationGeneralPreference"
            app:iconSpaceReserved="false"
            app:summary="@string/summary_chat"
            app:title="@string/chat" />

        <Preference
            app:fragment="com.wa.toolkit.ui.fragments.GeneralFragment$StatusGeneralPreference"
            app:iconSpaceReserved="false"
            app:summary="Stories, Styles and Privacy"
            app:title="@string/status" />

        <Preference
            app:fragment="com.wa.toolkit.ui.fragments.GeneralFragment$CallsGeneralPreference"
            app:iconSpaceReserved="false"
            app:summary="Blocker and Recording"
            app:title="@string/calls" />

    </com.wa.toolkit.ui.preferences.CardPreferenceCategory>

</PreferenceScreen>
